<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Интернет-магазин
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="action_mypublication" >Мои книги
    </string>
    <string name="title_section1" >Рекомендуем
    </string>
    <string name="title_section2" >Рейтинги
    </string>
    <string name="title_section3" >Категории
    </string>
    <string name="title_section4" >Жанры
    </string><string name="auth_title">Авторизация</string><string name="label_login">Email</string><string name="label_password">Пароль</string><string name="buttontext_auth">Авторизоваться</string>
    <string name="message_autherror">
        Неверный логин или пароль
    </string>
    <string name="menu_search">
        Искать публикации
    </string>
    <string name="message_rating">
        Рейтинг жанра
    </string>
    <string name="title_authorsrating">
        Рейтинг авторов
    </string>
    <string name="title_genresrating">
        Рейтинг жанра
    </string>
    <string name="yes">
        Да
    </string>
    <string name="no">
        Нет
    </string>
    <string name="title_publications">
        Публикации
    </string>
    <string name="title_chapter">
        Просмотр главы
    </string>
    <string name="rub">
        руб.
    </string>
    <string name="message_buy">
        Подтвердите покупку.
    </string>
    <string name="action_balance">
        Баланс
    </string>
    <string name="title_balance">
        Баланс
    </string>
    <string name="purchased">
        Куплено
    </string>
    <string name="action_editchapter">Редактировать главу</string>
    <string name="action_add">Добавить публикацию</string><string name="label_name">Название</string><string name="label_category">Категория</string><string name="label_genre">Жанр</string><string name="button_add">Добавить</string>
    <string name="message_fillerror">Не все поля заполнены</string>
    <string name="message_wait">Подождите...</string>
    <string name="message_chapteradd">Глава добавлена.</string>
    <string name="message_chaptersave">Глава сохранена.</string>
    <string name="message_publicationadd">Публикация добавлена.</string><string name="action_addchapter">Добавить главу</string><string name="label_price">Цена</string>
</resources>
