<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_mypublications"
          android:title="@string/action_mypublication"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_balance"
          android:title="@string/action_balance"
          android:orderInCategory="200"
          android:showAsAction="never" />
    <item android:id="@+id/menu_search"
                                             android:title="@string/menu_search"
                                             android:icon="@drawable/ic_action_search"
                                             android:showAsAction="ifRoom|collapseActionView"
                                             android:actionViewClass="android.widget.SearchView" />

</menu>
